cabal-version:          2.4
name:                   asciidoc-hs
version:                0.0.0.0
synopsis:               AsciiDoc parser that can be used as a Pandoc front-end
description:            See README.adoc for more info.
homepage:               https://github.com/gmarpons/asciidoc-hs
bug-reports:            https://github.com/gmarpons/asciidoc-hs/issues
license:                BSD-3-Clause
license-file:           LICENSE
author:                 Guillem Marpons
maintainer:             Guillem Marpons <gmarpons@mailbox.org>
copyright:              2020-2021 Guillem Marpons
build-type:             Simple
category:               Text
extra-doc-files:        CHANGELOG.adoc
                        README.adoc
tested-with:            GHC == 8.8.4
                        GHC == 8.10.4

source-repository head
  type:                 git
  location:             https://github.com/gmarpons/asciidoc-hs.git

common common-options
  build-depends:        base >= 4.12.0.0 && < 4.15
  ghc-options:          -Wall
                        -Wcompat
                        -Widentities
                        -Wincomplete-uni-patterns
                        -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:        -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:        -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:        -Wmissing-export-lists
                        -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:        -Wmissing-deriving-strategies

  default-language:     Haskell2010
  default-extensions:   LambdaCase,
                        OverloadedStrings

library
  import:               common-options
  hs-source-dirs:       src
  exposed-modules:      Text.AsciiDoc.ElementAttributes
                        Text.AsciiDoc.Blocks
                        Text.AsciiDoc.Inlines
                        Text.AsciiDoc.LineParsers
                        Text.AsciiDoc.Metadata
                        Text.AsciiDoc.Pandoc
                        Text.AsciiDoc.SourceRange
                        Text.AsciiDoc.SpecialChars
                        Text.AsciiDoc.UnparsedInline
  build-depends:        containers >= 0.6,
                        optics-core >= 0.2,
                        pandoc-types >= 1.20,
                        parsec >= 3.1.0,
                        parser-combinators >= 1.2.0,
                        syb >= 0.7.1,
                        text >= 1.2.0

executable asciidoc-hs
  import:               common-options
  hs-source-dirs:       exe
  main-is:              Main.hs
  build-depends:        asciidoc-hs,
                        aeson >= 1.4.7,
                        parsec >= 3.1.0,
                        text >= 1.2.0
  ghc-options:          -threaded
                        -rtsopts
                        -with-rtsopts=-N

test-suite asciidoc-hs-test
  import:               common-options
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Tests/Main.hs
  other-modules:        Tests.Blocks
                        Tests.Inlines
                        Tests.Metadata
  build-depends:        asciidoc-hs,
                        containers >= 0.6,
                        hspec-expectations-pretty-diff >= 0.7.2.5,
                        parsec >= 3.1.0,
                        pretty-show >= 1.10,
                        repr-tree-syb >= 0.1,
                        tasty,
                        tasty-hunit-compat >= 0.2,
                        text >= 1.2.0
  ghc-options:          -threaded
                        -rtsopts
                        -with-rtsopts=-N

library debug-with-parsec-free
  import:               common-options
  hs-source-dirs:       src
  exposed-modules:      Text.AsciiDoc.Debug.ParseTest
  other-modules:        Text.AsciiDoc.Blocks
                        Text.AsciiDoc.ElementAttributes
                        Text.AsciiDoc.Inlines
                        Text.AsciiDoc.LineParsers
                        Text.AsciiDoc.Metadata
                        Text.AsciiDoc.Pandoc
                        Text.AsciiDoc.SourceRange
                        Text.AsciiDoc.SpecialChars
                        Text.AsciiDoc.UnparsedInline
  build-depends:        containers >= 0.6,
                        mtl,
                        optics-core >= 0.2,
                        pandoc-types >= 1.20,
                        parsec-free == 3.1.11.7,
                        parser-combinators >= 1.2.0,
                        pretty-simple >= 4.0,
                        syb >= 0.7.1,
                        text >= 1.2.0
