cabal-version:          2.4
name:                   asciidoc-hs
version:                0.0.0.0
synopsis:               AsciiDoc parser that can be used as a Pandoc front-end
description:            See README.adoc for more info.
homepage:               https://github.com/gmarpons/asciidoc-hs
bug-reports:            https://github.com/gmarpons/asciidoc-hs/issues
license:                BSD-3-Clause
license-file:           LICENSE
author:                 Guillem Marpons
maintainer:             Guillem Marpons <gmarpons@mailbox.org>
copyright:              2020-2021 Guillem Marpons
build-type:             Simple
category:               Text
extra-doc-files:        CHANGELOG.adoc
                        README.adoc
tested-with:            GHC == 8.10.7
                        GHC == 9.0.1
                        GHC == 9.2.1

source-repository head
  type:                 git
  location:             https://github.com/gmarpons/asciidoc-hs.git

flag debug-with-parsec-free
  Description: Enable debugging with parsec-free
  Default:     False
  Manual:      True

common common-options
  build-depends:        base >= 4.13.0.0 && < 4.17
  ghc-options:          -Wall
                        -Wcompat
                        -Widentities
                        -Wincomplete-uni-patterns
                        -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:        -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:        -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:        -Wmissing-export-lists
                        -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:        -Wmissing-deriving-strategies

  if impl(ghc >= 9.2)
    default-language:   GHC2021
  else
    default-language:   Haskell2010
    default-extensions:
                        DeriveDataTypeable
                        DeriveFunctor
                        EmptyDataDeriving
                        FlexibleContexts
                        FlexibleInstances
                        GeneralizedNewtypeDeriving
                        MultiParamTypeClasses
                        StandaloneDeriving
                        TypeApplications
  other-extensions:
                        DerivingStrategies
                        GADTs
                        LambdaCase
                        OverloadedStrings

library
  import:               common-options
  hs-source-dirs:       src
  if flag(debug-with-parsec-free)
    exposed-modules:
                        Text.AsciiDoc.Debug.ParseTest
                        Text.AsciiDoc.Blocks
                        Text.AsciiDoc.ElementAttributes
                        Text.AsciiDoc.Inlines
                        Text.AsciiDoc.LineParsers
                        Text.AsciiDoc.Metadata
                        Text.AsciiDoc.Pandoc
                        Text.AsciiDoc.SourceRange
                        Text.AsciiDoc.SpecialChars
                        Text.AsciiDoc.UnparsedInline
  else
    exposed-modules:
                        Text.AsciiDoc.Blocks
                        Text.AsciiDoc.ElementAttributes
                        Text.AsciiDoc.Inlines
                        Text.AsciiDoc.LineParsers
                        Text.AsciiDoc.Metadata
                        Text.AsciiDoc.Pandoc
                        Text.AsciiDoc.SourceRange
                        Text.AsciiDoc.SpecialChars
                        Text.AsciiDoc.UnparsedInline
  if flag(debug-with-parsec-free)
    build-depends:
                        containers >= 0.6.0.1,
                        mtl >= 2.1.2,
                        optics-core >= 0.3,
                        pandoc-types >= 1.20,
                        parsec-free >= 3.1.11.7,
                        parser-combinators >= 1.2,
                        pretty-simple >= 4.0,
                        syb >= 0.7,
                        text >= 1.2.4
  else
    build-depends:
                        containers >=0.6.0.1 && <0.7,
                        optics-core >=0.3 && <0.5,
                        pandoc-types >=1.20 && <1.23,
                        parsec >=3.1.14 && <3.2,
                        parser-combinators >=1.2 && <1.4,
                        syb >=0.7 && <0.8,
                        text >=1.2.4 && <1.3

executable asciidoc-hs
  import:               common-options
  hs-source-dirs:       exe
  main-is:              Main.hs
  build-depends:
                        asciidoc-hs,
                        aeson >=1.4.7 && <2.1,
                        parsec >=3.1.14 && <3.2,
                        text >=1.2.4 && <1.3
  ghc-options:          -threaded
                        -rtsopts
                        -with-rtsopts=-N

test-suite asciidoc-hs-test
  import:               common-options
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Tests/Main.hs
  other-modules:        Tests.Blocks
                        Tests.Inlines
                        Tests.Metadata
  build-depends:
                        asciidoc-hs,
                        containers >=0.6.0.1 && <0.7,
                        hspec-expectations-pretty-diff >=0.7.2.5,
                        parsec >=3.1.14 && <3.2,
                        pretty-show >=1.10,
                        repr-tree-syb >=0.1.1,
                        tasty >=1.1.0.3,
                        tasty-hunit-compat >=0.2,
                        text >=1.2.4 && <1.3
  ghc-options:          -threaded
                        -rtsopts
                        -with-rtsopts=-N
